Remove blank pages generated from the template

--- a/relazione.tex
+++ b/relazione.tex
@@ -46,6 +46,22 @@
 \frontmatter
 \maketitle
 
+\chapter*{Ringraziamenti}
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam facilisis a mi eget pharetra. Maecenas feugiat, ligula in sagittis ultrices, tortor felis
+euismod sapien, id vestibulum enim magna eget lorem. Sed ut orci id est hendrerit facilisis. Mauris finibus, velit sed euismod egestas, nunc tortor posuere
+quam, eget tincidunt ligula nisl luctus diam. Sed finibus est quis dolor dignissim congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+vel orci metus. Praesent dictum, dolor vitae tincidunt posuere, lectus metus iaculis mauris, fermentum volutpat massa urna a diam. Aenean varius tortor id
+mi elementum lobortis. Nullam at libero volutpat, tristique lacus in, posuere velit.\\
+
+Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus eu lorem vehicula, aliquam urna quis, gravida velit. Pellentesque
+quis sem ipsum. Donec sapien nulla, interdum a magna vitae, hendrerit gravida justo. Fusce placerat magna quis cursus gravida. Nullam in nibh ac erat iaculis tempor
+et sed dolor. Etiam in vulputate libero. Duis suscipit nisi vel sapien ullamcorper, sed efficitur est aliquet. Aliquam venenatis eu risus eu semper.
+
+\let\cleardoublepage    % probably not a good decision
+\clearpage
+\let\cleardoublepage\clearpage  % restore changes
+
 \tableofcontents
 
 \mainmatter
