Update charts adding measurement units

--- a/relazione.tex
+++ b/relazione.tex
@@ -46,6 +46,7 @@
 \frontmatter
 \maketitle
 
+% treat this as a special chapter
 \chapter*{Ringraziamenti}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam facilisis a mi eget pharetra. Maecenas feugiat, ligula in sagittis ultrices, tortor felis
